src/objects/Insurance_PRoduct__c.object
<CustomObject>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_End_Date__c</fullName>
        <label>Insurance End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Fee Set</label>
        <referenceTo>Fee_Set__c</referenceTo>
        <relationshipLabel>Insurance Products</relationshipLabel>
        <relationshipName>Insurance_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Policy_Number__c</fullName>
        <label>Insurance Policy Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Product_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Insurance Product External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Start_Date__c</fullName>
        <label>Insurance Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>Loan_Product__c</referenceTo>
        <relationshipLabel>Insurance Products</relationshipLabel>
        <relationshipName>Insurance_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Insurance Product</label>
    <nameField>
        <displayFormat>IPID-{0000000000}</displayFormat>
        <label>Insurance Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>